--- a/appchap3.html
+++ b/appchap3.html
@@ -7,7 +7,7 @@
     <title>index3</title>
   </head>
   <body>
-    <h1 class="hello" id="title" autofocus>Grab me!</h1>
+    <h1 class="hello" id="wow" autofocus>Grab me!</h1>
     <script src="appchap3.js"></script>
   </body>
 </html>
