--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
       <input type="submit" value="Log In" />
     </form>
     <h1 id="greeting" class="hidden"></h1>
+    <h2 id="clock">00:00</h2>
+    <div id="quote">
+      <span></span><br />
+      <span></span>
+    </div>
     <a href="https://nomadcoders.co">Go to courses</a>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/clock.js"></script>
+    <script src="js/quotes.js"></script>
+    <script src="js/backgroud.js"></script>
   </body>
 </html>
