--- a/index.html
+++ b/index.html
@@ -18,15 +18,26 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" required/>
+    </form>
+    <ul id="todo-list">
+      
+    </ul>
     <div id="quote">
-      <span></span><br />
+      <span></span></br>
       <span></span>
     </div>
     <a href="https://nomadcoders.co">Go to courses</a>
-
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <script src="js/app.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/quotes.js"></script>
     <script src="js/backgroud.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
